fix: Update button styles for improved padding and layout; adjust font family in contact form; enhance about section text alignment and weight; refine order modal layout and styles for better responsiveness

--- a/src/components/button/styles.scss
+++ b/src/components/button/styles.scss
@@ -35,6 +35,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 12px 24px;
   &:hover {
     background-color: black;
     color: white;
@@ -55,5 +56,7 @@
   .card-button{
     height: 30px;
     font-size: 16px;
+    padding: 0px;
+    
   }
 }
