--- a/src/components/contactForm/styles.scss
+++ b/src/components/contactForm/styles.scss
@@ -34,7 +34,7 @@
             flex-direction: column;
             min-width: 40%;
             label{
-                font-family: fonts.$primary-font;
+                font-family: fonts.$secondary-font;
                 color: #fff;
                 margin-bottom: 8px;
             }
