--- a/src/layout/aboutSection/styles.scss
+++ b/src/layout/aboutSection/styles.scss
@@ -33,9 +33,10 @@
       color: white;
       line-height: 150%;
       letter-spacing: 1px;
-      font-weight: 100;
+      font-weight: 300;
       columns: 2;
       column-gap: 2rem;
+      text-align: justify;
 
       span {
         font-size: 24px;
