--- a/src/layout/orderModal/CartsMenu/styles.scss
+++ b/src/layout/orderModal/CartsMenu/styles.scss
@@ -42,25 +42,18 @@
     }
   }
 
-  &__image--checkout {
-    flex-direction: column;
-    align-items: center;
 
-    h1 {
-      color: colors.$brand-lightBrown;
-      text-transform: uppercase;
-      font-size: 64px;
-    }
-  }
 
   &__order-description-container {
     width: 50%;
     min-height: 100%;
+    padding: 2px;
   }
 
   &__description-container--checkout {
     display: flex;
     flex-direction: column;
+
   }
 
   &__order-title {
@@ -119,6 +112,12 @@
 
 @media (max-width: 768px) {
   .order-modal {
+    &__description-container--checkout {
+      box-sizing: border-box;
+      padding: 16px;
+      width: 100%;
+
+    }
 
     &__content-container {
       flex-direction: column;
@@ -134,27 +133,13 @@
         margin: 0px;
       }
     }
+
     &__calories {
       font-size: 14px;
       opacity: 0.8;
     }
-    &__cancel {
-      position: fixed;
-      top: 20px;
-      right: 20px;
-      background-color: black;
-      height: max-content;
-      width: max-content;
-      z-index: 10;
-      border-radius: 8px;
-      color: white;
-      // display: flex;
-      // justify-content: center;
-      // align-items: center;
-      font-size: 20px;
-      text-align: center;
-      padding: 8px 10px;
-    }
+
+    
 
     &__navigation {
       margin-left: calc(88vw);
