--- a/src/layout/orderModal/styles.scss
+++ b/src/layout/orderModal/styles.scss
@@ -17,6 +17,13 @@
     text-align: center;
     width: 70vw;
     margin: auto;
+    .icon-desktop{
+      background-color: #8d0909;
+      color: white;
+      padding: 16px;
+      border-radius: 50%;
+      cursor: pointer;
+    }
   }
 
   &__content {
@@ -40,6 +47,27 @@
     border: 2px solid rgba(51, 51, 51, 0.2);
     display: flex;
     z-index: -1;
+  }
+
+  &__image--checkout {
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    h1{
+      flex: 1;
+    }
+    .image-container{
+      flex: 3;
+    }
+    .layout-spacer{
+      flex: 1;
+    }
+
+    h1 {
+      color: colors.$brand-lightBrown;
+      text-transform: uppercase;
+      font-size: 64px;
+    }
   }
 
   &__items {
@@ -106,6 +134,8 @@ h1 {
     font-weight: 700;
   }
 
+  
+
   &__image {
     border-radius: 4px;
     display: flex;
@@ -113,6 +143,7 @@ h1 {
     align-items: center;
     padding: 20px;
     background-color: colors.$brand-green;
+
 
     img {
       width: 60px;
@@ -213,18 +244,37 @@ h1 {
     position: fixed;
     height: 100dvh;
     width: 100dvw;
-    background-color: rgb(204, 0, 0);
+    background-color: white;
     overflow-y: auto;
 
     &__navigation {
       display: none;
     }
 
+    &__cancel {
+      position: fixed;
+      top: 20px;
+      right: 20px;
+      background-color: black;
+      height: max-content;
+      width: max-content;
+      z-index: 10;
+      border-radius: 8px;
+      color: white;
+      // display: flex;
+      // justify-content: center;
+      // align-items: center;
+      font-size: 20px;
+      text-align: center;
+      padding: 8px 10px;
+    }
+
     &__content {
       overflow-y: scroll;
-      width: 90dvw;
+      width: 100dvw;
       background-color: white;
-      height: 95dvh;
+      height: 100dvh;
+      padding: 0px;
     }
 
     @supports not (height: 100dvh) {
